# CodexSkinTool

./: .gitignore  NOTICE.md  Package.swift  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
Sources/CodexSkinCore/: AppVersion.swift  AppearanceBaseline.swift  BackgroundSkinSession.swift  CodexAppService.swift  ConfigurationStore.swift  CustomTheme.swift  TOMLDocumentEditor+Sections.swift  TOMLDocumentEditor.swift  Theme.swift  ThemeLibrary.swift  ThemeService.swift
Sources/CodexSkinCoreChecks/: ThemeLibraryChecks.swift  main.swift
Sources/CodexSkinInjector/: CDPSession.swift  main.swift
Sources/CodexSkinTool/: AboutView.swift  AppModel.swift  AppSidebar.swift  CodexSkinToolApp.swift  ContentView.swift  CustomThemeEditor.swift  PageHeader.swift  SettingsView.swift  ThemeActionBar.swift  ThemeGalleryView.swift  ThemeVisuals.swift  UpdateChecker.swift
Tests/CodexSkinCoreTests/: README.md
scripts/: build-app.sh  generate-icon.swift  install-app.sh  test.sh  verify.mjs
src/: App.test.tsx  App.tsx  api.ts  contracts.ts  mock.ts  styles.css  useAppModel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic.rs  background.rs  background_helper.rs  background_legacy.rs  background_runtime.rs  catalog.rs  cdp.rs  commands.rs  config.rs  error.rs  images.rs  lib.rs  library.rs  main.rs  models.rs  paths.rs  platform.rs  platform_install.rs  process_identity.rs  process_identity_windows.rs  service.rs  tests.rs
(+10 files in other folders)
