[package]
name = "codex-skin-tool"
version = "1.2.1"
description = "Cross-platform Codex Desktop theme manager"
authors = ["猫七街"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_skin_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-skin-tool"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
base64 = "0.22"
dirs = "6.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "webp"] }
plist = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8", features = [] }
tauri-plugin-dialog = "2.4"
thiserror = "2.0"
toml_edit = "0.22"
sysinfo = "0.37"
tungstenite = "0.26"
url = "2.5"
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.23"
